# jax-vqgan

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  tasks.py  train.py
.github/workflows/: CI.yml  testing.yml
changelog/: index.html
conf/: config.yaml  gumbel.yaml  imagenet.yaml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
modules/: config.py  losses.py  models.py  training.py  utils.py  vqgan.py
notebooks/: example.ipynb  optimize.ipynb  visualize.ipynb
reference/: index.html
tests/: config_test.yaml  dataconfig_test.yaml  test_config.py  test_losses.py  test_models.py  test_training.py  test_utils.py  test_vqgan.py
tutorials/: index.html
