[build-system]
requires      = ["setuptools>=49.2.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VQGAN_jax"
description = "Implementation of VQ-GAN in JAX/Flax"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["VQGAN", "GAN", "JAX", "Flax", "ML", "Machine Learning", "Deep Learning"]
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
  {email = "vladimirzaigrajew@gmail.com", name = "Vladimir Zaigrajew"},
]
maintainers = [
  {name = "Vladimir Zaigrajew", email = "vladimirzaigrajew@gmail.com"}
]

[tool.pytest.ini_options]
markers = [
    "training_long: marks tests as slow (deselect with '-m \"not training_long\"')"
]
filterwarnings = [
    "ignore:distutils Version classes are deprecated.:DeprecationWarning"
]

[tool.black]
line-length = 100

[tool.nbqa.files]
isort = "^notebooks/example"
black = "^notebooks/example"
flake8 = "^notebooks/example"
