[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "jax-vqgan"
version = "0.2.0"
description = "JAX/Flax implementation of VQGAN"
authors = [
    {name = "Vladimir Zaigrajew", email = "vladimirzaigrajew@gmail.com"},
]
dependencies = [
    "tensorflow>=2.6.5",
    "jax>=0.3.15",
    "jaxlib>=0.3.15",
    "optax>=0.1.4",
    "flax>=0.4.1",
    "einops>=0.6.0",
    "hydra-core>=1.2.0",
    "albumentations>=1.3.0",
    "transformers>=4.24.0",
    "tensorflow-datasets>=4.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pytest.ini_options]
markers = [
    "training_long: marks tests as slow (deselect with '-m \"not training_long\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 100

[tool.nbqa.files]
isort = "^notebooks/example"
black = "^notebooks/example"
flake8 = "^notebooks/example"

[tool.pdm.scripts]
# post_install = "pre-commit install && pre-commit autoupdate"
train = {call = "jax_vqgan.train:main"}
clean = {shell = """find . -type f -name '*.DS_Store' -ls -delete &&
    find . | grep -E '.pytest_cache' | xargs rm -rf &&
    find . | grep -E '.ipynb_checkpoints' | xargs rm -rf &&
    find . | grep -E '.trash' | xargs rm -rf &&
    find . | grep -E '.coverage' | xargs rm -rf &&
    find . | grep -E '.mypy_cache' | xargs rm -rf &&
    rm -rf .nox"""}
test = "nox -s test-3.8"
test_extended = "nox -s test_extended-3.8"
coverage = "nox -s coverage-3.8"
style = "nox -s lint-3.8"
lintNb = "nox -s lint_nb-3.8"
typing = "nox -s mypy-3.8"
docs = "nox -s docs-3.8"

[tool.pdm]

[tool.pdm.overrides]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
    "parver>=0.4",
    "nox>=2022.11.21",
]
lint = [
    "flake8>=5.0.4",
    "black>=22.10.0",
    "isort>=5.10.1",
]
type_check = [
    "mypy>=0.991",
]
notebook_lint = [
    "nbqa>=1.5.3",
    "nbconvert>=7.2.5",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
doc = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings>=0.19.0",
    "mkdocstrings-python>=0.8.2",
]
